objects/Order__x.object
<CustomObject>
    <externalDataSource>Online_Orders</externalDataSource>
    <externalName>northwind</externalName>
    <fields>
        <fullName>Account__c</fullName>
        <externalDeveloperName>customerID</externalDeveloperName>
        <label>Account</label>
        <length>80</length>
        <referenceTargetField>Account.Customer_ID__c</referenceTargetField>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <externalDeveloperName>shipCountry</externalDeveloperName>
        <label>Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Date__c</fullName>
        <externalDeveloperName>orderDate</externalDeveloperName>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <externalDeveloperName>pk</externalDeveloperName>
        <label>Order Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <externalDeveloperName>shipPostalCode</externalDeveloperName>
        <label>Postal Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Name__c</fullName>
        <externalDeveloperName>shipName</externalDeveloperName>
        <label>Ship To Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipper__c</fullName>
        <externalDeveloperName>shipVia</externalDeveloperName>
        <label>Shipper</label>
        <length>80</length>
        <referenceTo>Shipper__x</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>Shipping_Charge__c</fullName>
        <externalDeveloperName>shippingCharge</externalDeveloperName>
        <label>Shipping Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shipping_City__c</fullName>
        <externalDeveloperName>shipCity</externalDeveloperName>
        <label>City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Date__c</fullName>
        <externalDeveloperName>shipped</externalDeveloperName>
        <label>Shipped On Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <externalDeveloperName>shipRegion</externalDeveloperName>
        <label>State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <externalDeveloperName>shipAddress</externalDeveloperName>
        <label>Street Address</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Order</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Order_Number__c</columns>
        <columns>Account__c</columns>
        <columns>Shipping_Date__c</columns>
        <columns>Shipper__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>Orders</pluralLabel>
</CustomObject>